--- a/index.html
+++ b/index.html
@@ -2,13 +2,38 @@
 <html>
 <head>
     <title>Bar Maps</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        h1 {
+            text-align: center;
+        }
+        .map-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+        }
+        .map-container iframe {
+            width: 100%;
+            height: 500px;
+            border: 1px solid #ccc;
+            margin-bottom: 20px;
+        }
+        @media (min-width: 768px) {
+            .map-container iframe {
+                width: 32%; /* Show 3 maps side by side on larger screens */
+            }
+        }
+    </style>
 </head>
 <body>
     <h1>Welcome to Bar Maps</h1>
-    <ul>
-        <li><a href="maps/top_10_bars_by_rating.html">Top 10 Bars by Rating</a></li>
-        <li><a href="maps/top_10_bars_by_bayesian.html">Top 10 Bars by Bayesian Average</a></li>
-        <li><a href="maps/top_10_bars_by_reviews.html">Top 10 Bars by Review Numbers</a></li>
-    </ul>
+    <div class="map-container">
+        <iframe src="maps/top_10_bars_by_rating.html" title="Top 10 Bars by Rating"></iframe>
+        <iframe src="maps/top_10_bars_by_bayesian.html" title="Top 10 Bars by Bayesian Average"></iframe>
+        <iframe src="maps/top_10_bars_by_reviews.html" title="Top 10 Bars by Review Numbers"></iframe>
+    </div>
 </body>
 </html>
