Localize map headings in index.html
- Update headings for map sections to use Traditional Chinese:
  - "評論分數前十" for Top 10 Bars by Rating
  - "貝氏平均前十" for Top 10 Bars by Bayesian Average
  - "評論數目前十" for Top 10 Bars by Review Numbers

- Adjust iframe titles to match localized headings for consistency.

- Improve user experience by aligning displayed text with the language
  preferences of the audience.

--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
     <h1>Welcome to Bar Maps</h1>
     <div class="map-container">
         <div class="map-item">
-            <h2>Top 10 Bars by Rating</h2>
+            <h2>評論分數前十</h2>
             <iframe src="maps/top_10_bars_by_rating.html" title="評論分數前十"></iframe>
         </div>
         <div class="map-item">
-            <h2>Top 10 Bars by Bayesian Average</h2>
+            <h2>貝氏平均前十</h2>
             <iframe src="maps/top_10_bars_by_bayesian.html" title="貝氏平均前十"></iframe>
         </div>
         <div class="map-item">
-            <h2>Top 10 Bars by Review Numbers</h2>
+            <h2>評論數目前十</h2>
             <iframe src="maps/top_10_bars_by_reviews.html" title="評論數目前十"></iframe>
         </div>
     </div>
