--- a/index.html
+++ b/index.html
@@ -10,47 +10,94 @@
         h1 {
             text-align: center;
         }
-        .map-container {
+        .section {
+            margin-bottom: 40px;
+        }
+        .section h2 {
+            text-align: center;
+            font-size: 1.8em;
+            color: #333;
+            margin-bottom: 20px;
+        }
+        .grid-container {
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
+            gap: 20px;
         }
-        .map-item {
-            width: 100%;
-            margin-bottom: 20px;
+        .grid-item {
+            flex: 1 1 calc(33.33% - 20px);
+            box-sizing: border-box;
             text-align: center;
         }
-        .map-item iframe {
-            width: 100%;
-            height: 500px;
+        .grid-item img {
+            max-width: 100%;
+            height: auto;
             border: 1px solid #ccc;
+            border-radius: 8px;
         }
-        .map-item h2 {
-            margin-bottom: 10px;
-            font-size: 1.5em;
-            color: #333;
+        .grid-item p {
+            margin-top: 10px;
+            font-size: 1.1em;
+            color: #555;
         }
-        @media (min-width: 768px) {
-            .map-item {
-                width: 32%; /* Show 3 maps side by side on larger screens */
+        @media (max-width: 768px) {
+            .grid-item {
+                flex: 1 1 100%; /* Stack items vertically on smaller screens */
             }
         }
     </style>
 </head>
 <body>
     <h1>Welcome to Bar Maps</h1>
-    <div class="map-container">
-        <div class="map-item">
-            <h2>評論分數前十</h2>
-            <iframe src="maps/top_10_bars_by_rating.html" title="評論分數前十"></iframe>
+
+    <!-- Maps Section -->
+    <div class="section">
+        <h2>地圖</h2>
+        <div class="grid-container">
+            <div class="grid-item">
+                <h3>評論分數前十</h3>
+                <iframe src="maps/top_10_bars_by_rating.html" title="評論分數前十" style="width: 100%; height: 400px; border: 1px solid #ccc;"></iframe>
+            </div>
+            <div class="grid-item">
+                <h3>貝氏平均前十</h3>
+                <iframe src="maps/top_10_bars_by_bayesian.html" title="貝氏平均前十" style="width: 100%; height: 400px; border: 1px solid #ccc;"></iframe>
+            </div>
+            <div class="grid-item">
+                <h3>評論數目前十</h3>
+                <iframe src="maps/top_10_bars_by_reviews.html" title="評論數目前十" style="width: 100%; height: 400px; border: 1px solid #ccc;"></iframe>
+            </div>
         </div>
-        <div class="map-item">
-            <h2>貝氏平均前十</h2>
-            <iframe src="maps/top_10_bars_by_bayesian.html" title="貝氏平均前十"></iframe>
-        </div>
-        <div class="map-item">
-            <h2>評論數目前十</h2>
-            <iframe src="maps/top_10_bars_by_reviews.html" title="評論數目前十"></iframe>
+    </div>
+
+    <!-- Images Section -->
+    <div class="section">
+        <h2>圖表</h2>
+        <div class="grid-container">
+            <div class="grid-item">
+                <img src="images/correlation_heatmap.png" alt="數值欄位相關性">
+                <p>數值欄位相關性</p>
+            </div>
+            <div class="grid-item">
+                <img src="images/rating_by_area.png" alt="區域評分分佈">
+                <p>區域評分分佈</p>
+            </div>
+            <div class="grid-item">
+                <img src="images/rating_distribution_with_counts.png" alt="評分分佈">
+                <p>評分分佈</p>
+            </div>
+            <div class="grid-item">
+                <img src="images/rating_vs_reviews.png" alt="評分 vs 評論數">
+                <p>評分 vs 評論數</p>
+            </div>
+            <div class="grid-item">
+                <img src="images/top_10_bars_bayesian_average.png" alt="貝氏平均前十">
+                <p>貝氏平均前十</p>
+            </div>
+            <div class="grid-item">
+                <img src="images/wordcloud_bar_names.png" alt="酒吧名稱文字雲">
+                <p>酒吧名稱文字雲</p>
+            </div>
         </div>
     </div>
 </body>
