Enhance chart section with detailed descriptions
- Update the section title from "圖表" to "分析視覺化圖表" for clarity.

- Add detailed descriptions to chart captions:
  - Specify metrics in "數值欄位相關性" (e.g., Bayesian average, rating,
    review count).
  - Highlight area comparison in "區域評分分佈" (e.g., 中山區 vs 中正區).
  - Indicate count inclusion in "評分分佈".
  - Clarify chart type in captions, such as "散點圖" for scatterplots
    and "長條圖" for bar charts.

- Refine text for better alignment with visualization purposes, ensuring
  enhanced user understanding and presentation consistency.

--- a/index.html
+++ b/index.html
@@ -72,27 +72,27 @@
 
     <!-- Images Section -->
     <div class="section">
-        <h2>圖表</h2>
+        <h2>分析視覺化圖表</h2>
         <div class="grid-container">
             <div class="grid-item">
                 <img src="images/correlation_heatmap.png" alt="數值欄位相關性">
-                <p>數值欄位相關性</p>
+                <p>數值欄位相關性 (貝氏平均評分, 評分, 評論數量)</p>
             </div>
             <div class="grid-item">
                 <img src="images/rating_by_area.png" alt="區域評分分佈">
-                <p>區域評分分佈</p>
+                <p>區域評分分佈 (中山區 vs 中正區)</p>
             </div>
             <div class="grid-item">
                 <img src="images/rating_distribution_with_counts.png" alt="評分分佈">
-                <p>評分分佈</p>
+                <p>評分分佈 (包含計數)</p>
             </div>
             <div class="grid-item">
-                <img src="images/rating_vs_reviews.png" alt="評分 vs 評論數">
-                <p>評分 vs 評論數</p>
+                <img src="images/rating_vs_reviews.png" alt="評分 vs 評論數量">
+                <p>評分 vs 評論數量 (散點圖)</p>
             </div>
             <div class="grid-item">
                 <img src="images/top_10_bars_bayesian_average.png" alt="貝氏平均前十">
-                <p>貝氏平均前十</p>
+                <p>貝氏平均前十 (長條圖)</p>
             </div>
             <div class="grid-item">
                 <img src="images/wordcloud_bar_names.png" alt="酒吧名稱文字雲">
