Enhance Lightbox configuration for smoother navigation
- Add Lightbox2 configuration to improve user experience.
- Enable 'wrapAround' for seamless navigation between images.
- Set 'resizeDuration' and 'fadeDuration' for smoother transitions.
- Ensure images have consistent fade animations using
  'imageFadeDuration'.

--- a/index.html
+++ b/index.html
@@ -119,5 +119,14 @@
 
     <!-- Lightbox JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+    <script>
+        // Configure Lightbox to make it user-friendly
+        lightbox.option({
+            'resizeDuration': 200,
+            'wrapAround': true, // Allows navigation between images
+            'fadeDuration': 300,
+            'imageFadeDuration': 300,
+        });
+    </script>
 </body>
 </html>
