--- a/index.html
+++ b/index.html
@@ -1,60 +1,74 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Bar Maps</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        h1 {
-            text-align: center;
-        }
-        .section {
-            margin-bottom: 40px;
-        }
-        .section h2 {
-            text-align: center;
-            font-size: 1.8em;
-            color: #333;
-            margin-bottom: 20px;
-        }
-        .grid-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            gap: 20px;
-        }
+    body {
+        font-family: Arial, sans-serif;
+        margin: 20px;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    .section {
+        margin-bottom: 40px;
+    }
+
+    .section h2 {
+        text-align: center;
+        font-size: 1.8em;
+        color: #333;
+        margin-bottom: 20px;
+    }
+
+    .grid-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        gap: 20px;
+    }
+
+    .grid-item {
+        flex: 1 1 calc(33.33% - 20px);
+        box-sizing: border-box;
+        text-align: center;
+    }
+
+    .grid-item img {
+        width: 100%;
+        /* Ensure images fill the container */
+        height: 300px;
+        /* Fixed height for consistency */
+        object-fit: cover;
+        /* Maintain aspect ratio */
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        cursor: pointer;
+        /* Indicate the image is clickable */
+    }
+
+    .grid-item p {
+        margin-top: 10px;
+        font-size: 1.1em;
+        color: #555;
+    }
+
+    @media (max-width: 768px) {
         .grid-item {
-            flex: 1 1 calc(33.33% - 20px);
-            box-sizing: border-box;
-            text-align: center;
+            flex: 1 1 100%;
+            /* Stack items vertically on smaller screens */
         }
-        .grid-item img {
-            width: 100%; /* Ensure images fill the container */
-            height: 300px; /* Fixed height for consistency */
-            object-fit: cover; /* Maintain aspect ratio */
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            cursor: pointer; /* Indicate the image is clickable */
-        }
-        .grid-item p {
-            margin-top: 10px;
-            font-size: 1.1em;
-            color: #555;
-        }
-        @media (max-width: 768px) {
-            .grid-item {
-                flex: 1 1 100%; /* Stack items vertically on smaller screens */
-            }
-        }
+    }
     </style>
     <!-- Lightbox CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet">
 </head>
+
 <body>
     <h1>Welcome to Bar Maps</h1>
-
     <!-- Maps Section -->
     <div class="section">
         <h2>地圖</h2>
@@ -73,7 +87,6 @@
             </div>
         </div>
     </div>
-
     <!-- Images Section -->
     <div class="section">
         <h2>分析視覺化圖表</h2>
@@ -116,17 +129,41 @@
             </div>
         </div>
     </div>
-
     <!-- Lightbox JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
     <script>
-        // Configure Lightbox to make it user-friendly
-        lightbox.option({
-            'resizeDuration': 200,
-            'wrapAround': true, // Allows navigation between images
-            'fadeDuration': 300,
-            'imageFadeDuration': 300,
-        });
+    // Configure Lightbox to make it user-friendly
+    lightbox.option({
+        'resizeDuration': 200,
+        'wrapAround': true, // Allows navigation between images
+        'fadeDuration': 300,
+        'imageFadeDuration': 300,
+    });
     </script>
+    <!-- Footer Section -->
+    <footer style="background-color: #333; color: #fff; padding: 20px; text-align: center; margin-top: 40px;">
+        <div style="max-width: 1200px; margin: 0 auto;">
+            <p>&copy; 2023 Bar Maps. All rights reserved.</p>
+            <p>
+                <a href="/privacy-policy" style="color: #fff; text-decoration: none;">Privacy Policy</a> |
+                <a href="/terms-of-service" style="color: #fff; text-decoration: none;">Terms of Service</a> |
+                <a href="/contact" style="color: #fff; text-decoration: none;">Contact Us</a>
+            </p>
+            <div style="margin-top: 10px;">
+                <a href="https://facebook.com" target="_blank" style="color: #fff; text-decoration: none; margin: 0 10px;">
+                    <i class="fab fa-facebook-f"></i> <!-- Font Awesome icon for Facebook -->
+                </a>
+                <a href="https://twitter.com" target="_blank" style="color: #fff; text-decoration: none; margin: 0 10px;">
+                    <i class="fab fa-twitter"></i> <!-- Font Awesome icon for Twitter -->
+                </a>
+                <a href="https://instagram.com" target="_blank" style="color: #fff; text-decoration: none; margin: 0 10px;">
+                    <i class="fab fa-instagram"></i> <!-- Font Awesome icon for Instagram -->
+                </a>
+            </div>
+        </div>
+    </footer>
+    <!-- Font Awesome for Icons -->
+    <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
