Update title and branding for 2025 event
- Change page title to "2025 條通祭酒吧分析" for better relevance.
- Update footer copyright year and branding to reflect the 2025 event.
- Remove unnecessary comments from CSS for cleaner code.
- Maintain consistent styling and layout across the page.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Bar Maps</title>
+    <title>2025 條通祭酒吧分析</title>
     <style>
     body {
         font-family: Arial, sans-serif;
@@ -39,15 +39,11 @@
 
     .grid-item img {
         width: 100%;
-        /* Ensure images fill the container */
         height: 300px;
-        /* Fixed height for consistency */
         object-fit: cover;
-        /* Maintain aspect ratio */
         border: 1px solid #ccc;
         border-radius: 8px;
         cursor: pointer;
-        /* Indicate the image is clickable */
     }
 
     .grid-item p {
@@ -59,7 +55,6 @@
     @media (max-width: 768px) {
         .grid-item {
             flex: 1 1 100%;
-            /* Stack items vertically on smaller screens */
         }
     }
     </style>
@@ -143,7 +138,7 @@
     <!-- Footer Section -->
     <footer style="background-color: #333; color: #fff; padding: 20px; text-align: center; margin-top: 40px;">
         <div style="max-width: 1200px; margin: 0 auto;">
-            <p>&copy; 2023 Bar Maps. All rights reserved.</p>
+            <p>&copy; 2025 條通祭酒吧分析. All rights reserved.</p>
             <p>
                 <a href="/privacy-policy" style="color: #fff; text-decoration: none;">Privacy Policy</a> |
                 <a href="/terms-of-service" style="color: #fff; text-decoration: none;">Terms of Service</a> |
