--- a/index.html
+++ b/index.html
@@ -57,6 +57,25 @@
             flex: 1 1 100%;
         }
     }
+
+    /* Footer Styles */
+    footer {
+        background-color: #333;
+        color: #fff;
+        padding: 20px;
+        text-align: center;
+        margin-top: 40px;
+    }
+
+    footer a {
+        color: #fff;
+        text-decoration: none;
+        margin: 0 10px;
+    }
+
+    footer a:hover {
+        text-decoration: underline;
+    }
     </style>
     <!-- Lightbox CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet">
@@ -136,22 +155,22 @@
     });
     </script>
     <!-- Footer Section -->
-    <footer style="background-color: #333; color: #fff; padding: 20px; text-align: center; margin-top: 40px;">
-        <div style="max-width: 1200px; margin: 0 auto;">
+    <footer>
+        <div>
             <p>&copy; 2025 條通祭酒吧分析. All rights reserved.</p>
             <p>
-                <a href="/privacy-policy" style="color: #fff; text-decoration: none;">Privacy Policy</a> |
-                <a href="/terms-of-service" style="color: #fff; text-decoration: none;">Terms of Service</a> |
-                <a href="/contact" style="color: #fff; text-decoration: none;">Contact Us</a>
+                <a href="javascript:void(0);">Privacy Policy</a> |
+                <a href="javascript:void(0);">Terms of Service</a> |
+                <a href="javascript:void(0);">Contact Us</a>
             </p>
-            <div style="margin-top: 10px;">
-                <a href="https://facebook.com" target="_blank" style="color: #fff; text-decoration: none; margin: 0 10px;">
+            <div>
+                <a href="https://www.facebook.com/ScottXieh/" target="_blank">
                     <i class="fab fa-facebook-f"></i> <!-- Font Awesome icon for Facebook -->
                 </a>
-                <a href="https://twitter.com" target="_blank" style="color: #fff; text-decoration: none; margin: 0 10px;">
+                <a href="https://x.com/fantasticHsieh" target="_blank">
                     <i class="fab fa-twitter"></i> <!-- Font Awesome icon for Twitter -->
                 </a>
-                <a href="https://instagram.com" target="_blank" style="color: #fff; text-decoration: none; margin: 0 10px;">
+                <a href="https://www.instagram.com/hsieh.scott/" target="_blank">
                     <i class="fab fa-instagram"></i> <!-- Font Awesome icon for Instagram -->
                 </a>
             </div>
