--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         </div>
     </footer>
     <!-- Font Awesome for Icons -->
-    <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
