--- a/index.html
+++ b/index.html
@@ -13,6 +13,35 @@
         text-align: center;
     }
 
+    /* Navigation Tabs */
+    .nav-tabs {
+        display: flex;
+        justify-content: center;
+        margin: 20px 0;
+        background-color: #f4f4f4;
+        padding: 10px;
+        border-radius: 8px;
+    }
+
+    .nav-tabs a {
+        padding: 10px 20px;
+        margin: 0 10px;
+        text-decoration: none;
+        color: #333;
+        font-weight: bold;
+        border-radius: 5px;
+        transition: background-color 0.3s ease;
+    }
+
+    .nav-tabs a:hover {
+        background-color: #ddd;
+    }
+
+    .nav-tabs a.active {
+        background-color: #333;
+        color: #fff;
+    }
+
     .section {
         margin-bottom: 40px;
     }
@@ -90,8 +119,14 @@
 
 <body>
     <h1>歡迎來到考特打造的條通祭分析</h1>
+    <!-- Navigation Tabs -->
+    <div class="nav-tabs">
+        <a href="#google-sheet-section">Google Sheet 數據</a>
+        <a href="#maps-section">地圖</a>
+        <a href="#analysis-section">分析視覺化圖表</a>
+    </div>
     <!-- Google Sheet Section -->
-    <div class="section">
+    <div class="section" id="google-sheet-section">
         <h2>Google Sheet 數據</h2>
         <div class="grid-container">
             <div class="grid-item">
@@ -102,7 +137,7 @@
         </div>
     </div>
     <!-- Maps Section -->
-    <div class="section">
+    <div class="section" id="maps-section">
         <h2>地圖</h2>
         <div class="grid-container">
             <div class="grid-item">
@@ -120,7 +155,7 @@
         </div>
     </div>
     <!-- Images Section -->
-    <div class="section">
+    <div class="section" id="analysis-section">
         <h2>分析視覺化圖表</h2>
         <!-- Math Formula Section -->
         <div style="margin-top: 40px; text-align: center; font-size: 1.2em; color: #333;">
@@ -182,12 +217,15 @@
     <!-- Lightbox JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
     <script>
-    // Configure Lightbox to make it user-friendly
-    lightbox.option({
-        'resizeDuration': 200,
-        'wrapAround': true, // Allows navigation between images
-        'fadeDuration': 300,
-        'imageFadeDuration': 300,
+    // Smooth scrolling for navigation tabs
+    document.querySelectorAll('.nav-tabs a').forEach(anchor => {
+        anchor.addEventListener('click', function (e) {
+            e.preventDefault();
+            const targetId = this.getAttribute('href');
+            document.querySelector(targetId).scrollIntoView({
+                behavior: 'smooth'
+            });
+        });
     });
     </script>
     <!-- Footer Section -->
