--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         /* Navigation Tabs */
         .nav-tabs {
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             margin: 20px 0;
             background-color: #f4f4f4;
             padding: 10px;
@@ -24,8 +24,10 @@
         }
 
         .nav-tabs a {
-            padding: 10px 20px;
-            margin: 0 10px;
+            flex: 1;
+            text-align: center;
+            padding: 10px 0;
+            margin: 0 5px;
             text-decoration: none;
             color: #333;
             font-weight: bold;
