--- a/index.html
+++ b/index.html
@@ -112,6 +112,28 @@
             }
         }
 
+        /* Fashionable Button */
+        .fashionable-button {
+            display: inline-flex;
+            align-items: center;
+            background-color: #4CAF50; /* Green background */
+            color: white;
+            padding: 10px 15px;
+            border-radius: 5px;
+            text-decoration: none;
+            font-size: 0.9em;
+            margin-left: 15px;
+            transition: background-color 0.3s ease;
+        }
+
+        .fashionable-button:hover {
+            background-color: #45a049; /* Darker green on hover */
+        }
+
+        .fashionable-button i {
+            margin-right: 8px;
+        }
+
         /* Footer Styles */
         footer {
             background-color: #333;
@@ -168,6 +190,8 @@
     </style>
     <!-- Lightbox CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet">
+    <!-- Font Awesome for Icons -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
     <!-- MathJax Script -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
@@ -183,7 +207,11 @@
     </div>
     <!-- Google Sheet Section -->
     <div class="section" id="google-sheet-section">
-        <h2>Google Sheet 數據</h2>
+        <h2>Google Sheet 數據
+            <a href="https://docs.google.com/spreadsheets/d/1zRhaKjJn8UQv-lj-UO11m-LZQb_XkaGj-znNPA_h9oE/edit?usp=sharing" target="_blank" class="fashionable-button">
+                <i class="fas fa-external-link-alt"></i> Open in Google Sheets
+            </a>
+        </h2>
         <div class="grid-container">
             <div class="grid-item">
                 <div class="responsive-iframe-container">
@@ -311,8 +339,6 @@
             </div>
         </div>
     </footer>
-    <!-- Font Awesome for Icons -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
