add thumbnail image

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>2025 條通祭酒吧分析</title>
     <meta property="og:title" content="2025 條通祭酒吧分析">
     <meta property="og:description" content="歡迎來到考特打造的條通祭分析。探索酒吧數據、根據特定屬性的排名地圖和視覺化圖表。">
-    <meta property="og:image" content="https://example.com/images/thumbnail.jpg"> <!-- Replace with your image URL -->
+    <meta property="og:image" content="images/thumbnail.jpg">
     <meta property="og:type" content="website">
     <!-- Other Meta Tags -->
     <meta name="description" content="歡迎來到考特打造的條通祭分析。探索酒吧數據、根據特定屬性的排名地圖和視覺化圖表。">
