--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
+            margin: 0; /* Remove default margin */
+            padding: 0; /* Remove default padding */
             position: relative;
         }
 
@@ -36,6 +37,7 @@
             height: 100vh;
             transform: translate(-50%, -50%);
             object-fit: cover; /* Ensure the video covers the entire background */
+            pointer-events: none; /* Disable interaction with the iframe */
         }
 
         /* Overlay to adjust transparency */
@@ -49,15 +51,25 @@
             background-color: rgba(0, 0, 0, 0.2); /* Adjust transparency (0.5 = 50% opacity) */
         }
 
+        /* Click Blocker Overlay */
+        .click-blocker {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 0; /* Place it above the video but below the content */
+        }
+
         /* Content styling */
         .content {
             position: relative;
-            z-index: 1; /* Place content above the video */
-            background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent background for readability */
+            z-index: 1; /* Place content above the video and click blocker */
+            background-color: rgba(255, 255, 255, 0.9); /* Slightly transparent background for readability */
             padding: 20px;
             border-radius: 10px;
             max-width: 800px;
-            margin: 50px auto;
+            margin: 50px auto; /* Center the content */
         }
 
         /* Ensure the video doesn't autoplay on mobile devices */
@@ -255,6 +267,9 @@
             allowfullscreen>
         </iframe>
     </div>
+
+    <!-- Click Blocker Overlay -->
+    <div class="click-blocker"></div>
 
     <!-- Main Content -->
     <div class="content">
